--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -19,7 +19,8 @@ iframe::-webkit-scrollbar {
 body {
     font-family: 'Space Mono', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     -webkit-font-smoothing: antialiased;
-    @apply bg-black text-green-500 text-sm;
+    @apply bg-black text-green-500 text-sm overflow-y-scroll;
+    min-height: 100vh;
 }
 
 .wrapper {
@@ -36,12 +37,12 @@ body {
 }
 
 .highlight {
-    @apply relative transition-all duration-100 ease-in-out;
+    @apply relative transition-all duration-100 ease-in-out overflow-x-hidden;
 
     @nest &:before {
         @apply absolute inset-0 bg-green-500;
         content: "";
-        max-width: 0;
+        transform: translateX(-105%);
         transition: .3s cubic-bezier( .19, 1, .22, 1 ) all;
     }
 
@@ -50,14 +51,14 @@ body {
     }
 
     @nest &:hover:before {
-        max-width: 2000px;
+        transform: translateX(0);
     }
 
     @nest &[aria-current="page"]:not(.logo) {
         @apply text-black;
         
         @nest &:before {
-            max-width: 2000px;
+            transform: translateX(0);
         }
     }
 }
