--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
 @tailwind base;
 
@@ -17,10 +18,8 @@ iframe::-webkit-scrollbar {
 }
 
 body {
-    font-family: 'Space Mono', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     -webkit-font-smoothing: antialiased;
     @apply bg-black text-green-500 text-sm overflow-y-scroll;
-    min-height: 100vh;
 }
 
 .wrapper {
@@ -61,6 +60,10 @@ body {
             transform: translateX(0);
         }
     }
+}
+
+[aria-current="page"]:not(.logo) {
+    @apply bg-green-500 text-black;
 }
 
 .frame {
