--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
 
 @tailwind base;
 
@@ -11,16 +11,9 @@
     background: transparent; /* make scrollbar transparent */
 }
 
-iframe::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
-}
-
 body {
-    font-family: 'Space Mono', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     -webkit-font-smoothing: antialiased;
-    @apply bg-black text-green-500 text-sm overflow-y-scroll;
-    min-height: 100vh;
+    @apply bg-black text-green-500 text-sm font-sans;
 }
 
 .wrapper {
@@ -63,10 +56,18 @@ body {
     }
 }
 
+[aria-current="page"]:not(.logo) {
+    @apply bg-green-500 text-black;
+}
+
 .frame {
     transition: .6s cubic-bezier( .19, 1, .22, 1 ) transform;
 }
 
 .left-1 {
     margin-left: -1px;
+}
+
+.tl-edges {
+    overflow-x: inherit;
 }
