--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
 @tailwind base;
 
@@ -17,56 +17,21 @@ body {
     @apply bg-black text-green-500 text-sm font-sans;
 }
 
-.wrapper {
-    height: calc(100vh - 2rem);
+button, a {
+    transition: background-color .1s ease-in-out, color .1s ease-in-out, opacity .1s ease-in-out;
 }
 
 .border-strike {
     @nest &:before {
         @apply absolute left-0 right-0;
         content: "";
-        border: .5px dashed #18443A;
+        border: .5px dashed #333;
         top: 50%;
     }
 }
 
-.highlight {
-    @apply relative transition-all duration-100 ease-in-out overflow-x-hidden;
-
-    @nest &:before {
-        @apply absolute inset-0 bg-green-500;
-        content: "";
-        transform: translateX(-105%);
-        transition: .3s cubic-bezier( .19, 1, .22, 1 ) all;
-    }
-
-    @nest &:hover {
-        @apply text-black;
-    }
-
-    @nest &:hover:before {
-        transform: translateX(0);
-    }
-
-    @nest &[aria-current="page"]:not(.logo) {
-        @apply text-black;
-        
-        @nest &:before {
-            transform: translateX(0);
-        }
-    }
-}
-
-[aria-current="page"]:not(.logo) {
+[aria-current="page"].nav-item {
     @apply bg-green-500 text-black;
-}
-
-.frame {
-    transition: .6s cubic-bezier( .19, 1, .22, 1 ) transform;
-}
-
-.left-1 {
-    margin-left: -1px;
 }
 
 .tl-edges {
