--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 @tailwind base;
 
@@ -15,6 +14,10 @@
 body {
     -webkit-font-smoothing: antialiased;
     @apply bg-black text-green-500 text-sm font-sans;
+}
+
+.max-w-6xl {
+    max-width: 80rem;
 }
 
 button, a {
