--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Inter:wght@400;500;700&display=swap');
 
 @tailwind base;
 
@@ -11,6 +11,12 @@
     background: transparent; /* make scrollbar transparent */
 }
 
+@variants hover, group-hover {
+    .box-shadow {
+        box-shadow: inset 0 0 10px rgba(81, 205, 214,.15);
+    }
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     @apply bg-black text-green-500 text-sm font-sans;
@@ -20,23 +26,32 @@ body {
     max-width: 80rem;
 }
 
-button, a {
-    transition: background-color .1s ease-in-out, color .1s ease-in-out, opacity .1s ease-in-out;
+button, a, a .border-t, ul, a .ext-icon {
+    transition: background-color .1s ease-in-out, color .1s ease-in-out, opacity .1s ease-in-out, border-color .1s ease-in-out, box-shadow .1s ease-in-out, transform .1s ease-in-out;
 }
 
 .border-strike {
     @nest &:before {
-        @apply absolute left-0 right-0;
+        @apply absolute left-0 right-0 bg-gray-500;
         content: "";
-        border: .5px dashed #333;
+        height: 1px;
         top: 50%;
     }
 }
 
 [aria-current="page"].nav-item {
-    @apply bg-green-500 text-black;
+    @apply bg-green-500 text-black border-green-500;
 }
 
 .tl-edges {
     overflow-x: inherit;
+}
+
+.ext-icon {
+    transform: translateX(-50%);
+}
+
+
+.clickable-item:hover .ext-icon  {
+    transform: translateX(0);
 }
