--- a/web/src/styles/tailwind.css
+++ b/web/src/styles/tailwind.css
@@ -11,6 +11,18 @@
     background: transparent; /* make scrollbar transparent */
 }
 
+.blur {
+    filter: blur(3px);
+    transition: opacity .1s ease-in-out, filter .1s ease-in-out;
+    opacity: .5 !important;
+}
+
+@variants responsive {
+    .no-blur {
+        filter: blur(0);
+    }
+}
+
 @variants hover, group-hover {
     .box-shadow {
         box-shadow: inset 0 0 10px rgba(81, 205, 214,.35);
@@ -23,10 +35,6 @@
 body {
     -webkit-font-smoothing: antialiased;
     @apply bg-black text-green-500 text-sm font-sans;
-}
-
-.max-w-6xl {
-    max-width: 80rem;
 }
 
 button, a, a .border-t, ul, a .ext-icon {
