--- a/web/src/components/nav.module.css
+++ b/web/src/components/nav.module.css
@@ -11,7 +11,7 @@
 
 .nav {
   transform: translateX(-100%);
-  transition: transform .6s cubic-bezier(.19, 1, 0.22, 1);
+  transition: transform .6s cubic-bezier(.19, 1, 0.22, 1), box-shadow .6s cubic-bezier(.19, 1, 0.22, 1);
 
   @media (--media-min-large) {
     transform: translateX(0);
